// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification should render with right amount of elements 1`] = `
<CSSTransition
  classNames="notification"
  in={true}
  timeout={3000}
>
  <div
    className="notification z-depth-1"
  >
    <p>
      you are testing this
    </p>
  </div>
</CSSTransition>
`;

exports[`Notification should render with right amount of elements when notifiacation is empty 1`] = `
<CSSTransition
  classNames="notification"
  in={false}
  timeout={3000}
>
  <div
    className="notification z-depth-1"
  >
    <p />
  </div>
</CSSTransition>
`;
